--- a/CertnIDMobileExample/Info.plist
+++ b/CertnIDMobileExample/Info.plist
@@ -21,5 +21,12 @@
 	</dict>
     <key>NSCameraUsageDescription</key>
         <string>Please allow camera access</string>
+    <key>NFCReaderUsageDescription</key>
+        <string>NFC tag to read NDEF messages into the application</string>
+
+    <key>com.apple.developer.nfc.readersession.iso7816.select-identifiers</key>
+        <array>
+            <string>A0000002471001</string>
+        </array>
 </dict>
 </plist>
